[tool.poetry]
name = "sutekkapakku"
version = "0.1.0"
description = ""
authors = ["Yest Izit <hi@dmitry.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b6"
sqlalchemy = "2.0.0b3"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
emoji = "^2.2.0"
pillow = "^9.3.0"
aiohttp-healthcheck = "^1.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = { extras = ["d"], version = "^22.10.0" }
alembic = "^1.7.7"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true