[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sutekkapakku"
version = "0.1.0"
description = ""
authors = ["Yest Izit <hi@dmitry.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b6"
sqlalchemy = "2.0.0b3"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
emoji = "^2.2.0"
pillow = "^9.3.0"
aiohttp-healthcheck = "^1.3.1"
multipledispatch = "^0.6.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.7.7"
black = { extras = ["d"], version = "^22.10.0" }
flake8 = "^6.0.0"
flake8-annotations = "^2.9.1"
flake8-annotations-complexity = "^0.0.7"
flake8-annotations-coverage = "^0.0.6"
flake8-builtins = "^2.0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-comments = "^0.1.2"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-expression-complexity = "^0.0.11"
flake8-functions = "^0.0.7"
flake8-functions-names = "^0.4.0"
flake8-logging-format = "^0.9.0"
flake8-new-union-types = "^0.4.1"
flake8-pep585 = "^0.1.6"
flake8-pyproject = "^1.2.1"
flake8-return = "^1.2.0"
flake8-variables-names = "^0.0.5"
mypy = "^0.991"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"

[tool.mypy]
exclude = "alembic"
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true
warn_unused_ignores = true

[tool.black]
line-length = 88
include = "\\.pyi?$"
force-exclude = '''
/(
  | alembic
)/
'''

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,.mypy_cache,alembic"