[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sutekkapakku"
version = "0.1.0"
description = ""
authors = ["Yest Izit <hi@dmitry.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b6"
sqlalchemy = "2.0.0b4"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
emoji = "^2.2.0"
pillow = "^9.3.0"
aiohttp-healthcheck = "^1.3.1"

[tool.poetry.group.dev.dependencies]
alembic = "^1.7.7"
black = { extras = ["d"], version = "^22.10.0" }
flake8 = "^6.0.0"
flake8-comprehensions = "^3.10.1"
flake8-logging-format = "^0.9.0"
flake8-new-union-types = "^0.4.1"
flake8-pep585 = "^0.1.6"
flake8-pyproject = "^1.2.2"
flake8-return = "^1.2.0"
flake8-variables-names = "^0.0.5"
mypy = "^0.991"
pre-commit = "^2.20.0"

[tool.mypy]
exclude = ["alembic",".mypy_cache", ".git" ]

pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true
warn_unused_ignores = true

[tool.black]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | alembic
  )/
)
'''
line-length = 88
include = "\\.pyi?$"

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,.mypy_cache,.venv,alembic,build,dist"